@@ -1,5 +1,9 @@
 ## 0.4.0 / Unreleased
 
+  * Implement "Cache-Control: max-age=N" request directive by forcing
+    validation when the max-age provided exceeds the age of the cache
+    entry.
+
   * Properly implement "Cache-Control: no-cache" request directive by
     performing a full reload. RFC 2616 states that when "no-cache" is
     present in the request, the cache MUST NOT serve a stored response even
